tests/ui/const-fn.rs
use no_panic::no_panic;

#[no_panic]
const fn f() {}

fn main() {}
